# endless-ssh-rs

./: .dependency-cruiser.cjs  .dockerignore  .editorconfig  .eslintignore  .eslintrc.cjs  .gitignore  .prettierignore  .releaserc.cjs  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  cliff.toml  clippy.toml  cog.toml  generate-test-report.sh  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.cjs  project-words.txt  renovate.json  rust-toolchain.toml  spellcheck.dic  tailwind.config.cjs  tsconfig.json  update-from-upstream.sh  vite.config.ts
.cargo/: config.toml
.github/: dependabot.yml  file-filters.yml
.github/workflows/: build-rust.yml  build-typescript.yml  build.yml  ci.yml  codeql.yml  graduate-release.yml  lint-commits.yml  machete.yml  publish-crate-after-release.yml  release.yml  retag-containers-after-push.yml  retag-containers-after-release.yml  rust.yml  semantic-tags-after-release.yml  semgrep.yml  spellcheck.yml
.husky/: pre-commit
back-end/src/: cli.rs  client.rs  client_queue.rs  ffi_wrapper.rs  line.rs  listener.rs  main.rs  sender.rs  server.rs  signal_handlers.rs  timeout.rs
back-end/src/events/: mod.rs
back-end/src/traits/: display_as_debug.rs  mod.rs  offset_datetime_formatter.rs
build-scripts/: build.sh
crates/endless-ssh-rs/: Cargo.toml
crates/endless-ssh-rs/src/: cli.rs  client.rs  client_queue.rs  config.rs  ffi_wrapper.rs  line.rs  listener.rs  main.rs  sender.rs  signal_handlers.rs  timeout.rs  traits.rs  utils.rs
crates/endless-ssh-rs/src/traits/: display_as_debug.rs  offset_datetime_formatter.rs  pretty_formatter.rs
crates/endless-ssh-rs/src/utils/: env.rs  url.rs
front-end/src/: index.html
front-end/src/components/: app.test.tsx  app.tsx  errorBoundary.tsx  logViewer.tsx
front-end/src/entrypoints/: index.tsx
front-end/src/lib/: clientLogMessage.ts  serverLogMessage.ts
front-end/src/types/: env.d.ts
src/: cli copy.rs  cli.rs  client.rs  client_queue.rs  clients.rs  config.rs  ffi_wrapper.rs  handlers.rs  helpers.rs  line.rs  listener.rs  log.rs  main.rs  sender.rs  server.rs  signal_handlers.rs  statistics.rs  time.rs  timeout.rs  utils.rs
src/traits/: display_as_debug.rs  offset_datetime_formatter.rs  pretty_formatter.rs
src/utils/: mod.rs
