[package]
name = "endless-ssh-rs"
# don't change this, it's updated before an actual build by update-version.sh
version = "0.0.0-development"
edition = "2024"
rust-version = "1.86.0"
authors = ["Kristof Mattei"]
description = "endless-ssh-rs"
license-file = "LICENSE"
categories = ["ssh", "utility"]
keywords = ["ssh", "tarpit", "script-kiddies"]
repository = "https://github.com/kristof-mattei/endless-ssh-rs"

[lints.clippy]
# don't stop from compiling / running
all = "warn"
cargo = "warn"
complexity = "warn"
correctness = "warn"
pedantic = "warn"
perf = "warn"
# restriction = "warn"
style = "warn"
suspicious = "warn"

# this one causes confusion when combining variables (`foo`) and
# dereferenced variables (`foo.bar`). The latter cannot be inlined
# so we don't inline anything
uninlined-format-args = { level = "allow", priority = 127 }

[lints.rust]
let_underscore_drop = { level = "deny", priority = 127 }
non_ascii_idents = { level = "deny", priority = 127 }

[features]
coverage = []

[dependencies]
clap = { version = "4.5.36", features = ["cargo"] }
color-eyre = { git = "https://github.com/eyre-rs/eyre", rev = "c4ee249f7c51dc6452e8704ae8d117d90d6eeebc" }
dotenvy = "0.15.7"
libc = "0.2.171"
mockall = "0.13.1"
mockall_double = "0.3.1"
rand = "0.9.0"
time = { version = "0.3.41", features = ["formatting"] }
tokio = { version = "1.44.2", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "signal",
    "net",
    "sync",
    "io-util",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
    "time",
    "tracing-log",
] }
tracing-error = "0.2.1"
tokio-util = "0.7.14"

# OpenSSL for musl
# [target.'cfg(all(any(target_arch="x86_64", target_arch="aarch64"), target_os="linux", target_env="musl"))'.dependencies]
# openssl = { version = "0.10.36", features = ["vendored"] }
